Changes for 1.1.2:

 - added new value for 'net.tcp.service*[]', 2 - timeout (Eugene)
 - fixed order of displaying log files (Eugene)
 - added support of 'pfree' and 'pused' for 'vfs.fs.size' of windows (Eugene)
 - added '<=' comporator for trigger severity of action conditions (Eugene)
 - fixed problem with escape characters in triggers (Eugene)
 - fixed 'system.cpu.util[*]' for Tru64 (Eugene)
 - disabled exit code handling of UserParameter scripts (Eugene)
 - improved UserParameter substitution (Eugene)
 - improved definition of integer and float point types (Eugene)
 - fixed problem with ASN_IPADDRESS SNMP values (Eugene)
 - added action email action variable '{TRIGGER.SEVERITY}' (Eugene)
 - added Brazilian Portuguese translation. Thanks to Marcelo Honorio. (Alexei)
 - fixed history cleaning (Eugene)
 - fixed Unknown when selcting trigger severity Disaster in action form (Alexei)
 - fixed windows agent crashing with processing of 'system.cpu.util' key (Eugene)
 - fixed errors while adding a host to IT service (Alexei)
 - fixed warning in classes.inc.php while displaying graphs (Alexei)
 - fixed warning in trigger selection popup (Alexei)
 - added spec file for ZABBIX agent. Thanks to Alexey Zilber. (Alexei)
 - fixed count of problems displayin for submaps (Eugene)
 - fixed incorrect disabling of actions while deleting a trigger (Alexei)
 - added Zabbix agent for Win64 platforms. (Eugene)
 - added alternative startup scripts for Fedora Linux (Alexei)
 - fixed graphs drawing (Eugene)
 - fixed graph min value calculation (Eugene)
 - better pattern of distribution of item next checks to improve overall
 performance (Alexei)
 - fixed housekeeper, removal of historical and trend data (Alexei)
 - fixed caption of IT Services Availability Report (Alexei)

Changes for 1.1.1:

 - changed version to 1.1.1 (Alexei)
 - added support of "system.swap.out" key for Linux with kernel 2.4 (Eugene)
 - added support of "system.swap.in" key for Linux with kernel 2.4 (Eugene)